--- a/views/admin/pages/products-category/create.pug
+++ b/views/admin/pages/products-category/create.pug
@@ -59,6 +59,7 @@ block main
                                         .form-group
                                             label(for="desc") Mô tả
                                             textarea.textarea-mce#desc.form-control(
+                                                textarea-mce
                                                 name="description"
                                                 rows="6"
                                                 placeholder="Mô tả ngắn gọn về danh mục"
