--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -62,6 +62,7 @@ block main
                                         .form-group
                                             label(for="desc") Mô tả
                                             textarea.textarea-mce#desc.form-control(
+                                                textarea-mce
                                                 name="description"
                                                 rows="6"
                                                 placeholder="Mô tả ngắn gọn về sản phẩm"
