--- a/views/admin/pages/products-category/index.pug
+++ b/views/admin/pages/products-category/index.pug
@@ -47,6 +47,7 @@ block main
                                                 i.fas.fa-sort.ml-1
                                             th vị trí
                                             th Trạng thái
+                                            th Người tạo
                                             th Hành động
                                     tbody#productsTableBody
                                         +table-tree(records)
