--- a/views/admin/pages/products-category/index.pug
+++ b/views/admin/pages/products-category/index.pug
@@ -48,6 +48,7 @@ block main
                                             th vị trí
                                             th Trạng thái
                                             th Người tạo
+                                            th Người cập nhật
                                             th Hành động
                                     tbody#productsTableBody
                                         +table-tree(records)
