- Thay đổi trạng thái 1 account - Log lịch sử chỉnh sửa account

--- a/views/admin/pages/accounts/index.pug
+++ b/views/admin/pages/accounts/index.pug
@@ -66,6 +66,7 @@ block main
                                             th Email
                                             th Trạng thái
                                             th Người tạo
+                                            th Người cập nhật
                                             th Hành động
                                     tbody#productsTableBody
                                         each account, idx in records
@@ -119,6 +120,12 @@ block main
                                                         +formatDate(account.createdAt)
                                                     else
                                                         span.text-muted Chưa có
+                                                td
+                                                    - const updatedBy = Array.isArray(account.updatedBy) ? account.updatedBy.slice(-1)[0] : null;
+                                                    if(updatedBy)
+                                                        p #{updatedBy.accountFullName || 'N/A'}
+                                                        p
+                                                            +formatDate(updatedBy.updatedAt)
                                                 td
                                                     if(authRole.permissions.includes('accounts_view'))
                                                         a.btn.btn-secondary.btn-sm.btn-glow(
