--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -3,9 +3,9 @@ nav.navbar.navbar-expand-lg.navbar-dark.fixed-top(role="navigation" aria-label="
         button#sidebarToggle.btn.btn-link.text-white.d-lg-none(type="button" aria-label="Mở/đóng sidebar")
             i.fas.fa-bars
 
-        a.navbar-brand(href="#")
+        a.navbar-brand(href=`/${prefixAdmin}/dashboard`)
             i.fas.fa-crown.mr-2
-            | Admin
+            | Admin - #{authUser.fullName}
 
         // Search (desktop)
         //- .search-container.mx-auto.d-none.d-md-block
@@ -27,10 +27,10 @@ nav.navbar.navbar-expand-lg.navbar-dark.fixed-top(role="navigation" aria-label="
                 )
                     i.fas.fa-user-circle.fa-lg
                 .dropdown-menu.dropdown-menu-right(aria-labelledby="userDropdown")
-                    a.dropdown-item(href="#")
+                    a.dropdown-item(href=`/${prefixAdmin}/my-account`)
                         i.fas.fa-user.mr-2
                         | Hồ sơ
-                    a.dropdown-item(href="#")
+                    a.dropdown-item(href=`/${prefixAdmin}/settings`)
                         i.fas.fa-cog.mr-2
                         | Cài đặt
                     .dropdown-divider
